# DLPatch

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: install_script.sh.in  version.h.in
headers/: DL_Manager.hpp  DL_Manager_GOT.ipp  DL_Manager_check.ipp  DL_Manager_extract_funcs_from_lib.ipp  DL_Manager_get_lib_data.ipp  DL_Manager_helpers.ipp  DL_Manager_replace.ipp  DL_Manager_rollback.ipp  DL_manager_replace.ipp  arch.hpp  arch_x86_64.ipp  logging.hpp
headers/backend/: DL_Manager.hpp  DL_Manager_GOT.ipp  DL_Manager_cache.ipp  DL_Manager_check.ipp  DL_Manager_extract_funcs_from_lib.ipp  DL_Manager_get_lib_data.ipp  DL_Manager_helpers.ipp  DL_Manager_load.ipp  DL_Manager_memory.ipp  DL_Manager_parse_elf.ipp  DL_Manager_patch.ipp  DL_Manager_replace.ipp  DL_Manager_rollback.ipp  DL_Manager_state.ipp  DL_Manager_threads.ipp  DL_Manager_tracker.ipp  DL_Manager_types.hpp  arch.hpp  arch_x86_64.ipp  logging.hpp
headers/daemon/: daemon.hpp  daemon.ipp
headers/frontend/: frontend.hpp  frontend.ipp
lib_target/: math_ops.cpp  math_ops.h  math_ops_v2.cpp  math_ops_v3.cpp  tiny_math_ops.h  tiny_math_ops_v1.cpp  tiny_math_ops_v2.cpp
src/: debug_maps.cpp  main.cpp  scanner_test.cpp  target_program.cpp  target_program_tiny.cpp  tiny_scanner_test.cpp
src/daemon/: daemon.cpp
src/main/: frontend.cpp
tests/: CMakeLists.txt  debug_maps.cpp  scanner_test.cpp  target_program.cpp  target_program_tiny.cpp  tiny_scanner_test.cpp
